--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Hi! I am V Sanjay Deva Rao and this is your webapp.
         </div>
         <br>
-        <a href="article1.html"><p1>Article-1<p1></a>
+        <p1><a href="article1.html">Article-1</a></p1>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
