[imad-console] Updates ui/article1.html

--- a/ui/article1.html
+++ b/ui/article1.html
@@ -70,7 +70,7 @@ font-size: 25px;
     float:left;}
     #background-image
     {
-        background-image: url('article1_img/fire1.jpg')  ;
+        background-image: url('fire1.jpg')  ;
         height: 900px;
         width:1500px;
      
@@ -203,7 +203,7 @@ li a {
             <div id='background-image' > 
                 <div id="header">
                     <a href="#" class="logo">
-                        <img src="article1_img/logo3.png">
+                        <img src="logo3.png">
                 </a>
                 <nav style="float:right;">
                     <ul type="none">
@@ -322,7 +322,7 @@ li a {
         </table>
  </div>
        <div id="clarkimg">
-            <img src="article1_img/sup.jpg">
+            <img src="sup.jpg">
        </div>
        <div id="clarkc">
            <h5>Superman Identity : Clark Kent</h5>
