[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -21,7 +21,7 @@
         <br>
         
         <center>
-        <p1><a href="article1.html">Article-1</a></p1>
+        <p1><a href="article1">Article-1</a></p1>
         </center>
         
         <script type="text/javascript" src="/ui/main.js">
